@@ -363,7 +363,7 @@ namespace Orthanc
 
     virtual int64_t GetLastChangeIndex() ORTHANC_OVERRIDE;
   
-    virtual void TagAsMostRecentPatient(int64_t patient) ORTHANC_OVERRIDE;
+    virtual void TagMostRecentPatient(int64_t patient) ORTHANC_OVERRIDE;
   };
 }
 
